[gd_scene load_steps=11 format=3 uid="uid://byw8wh47bsy8g"]

[ext_resource type="Script" path="res://scripts/s1 question/S-1 Question1.gd" id="1_4aetr"]
[ext_resource type="Script" path="res://scripts/ErrorLabel.gd" id="2_aynrn"]
[ext_resource type="Script" path="res://scripts/SyntaxError.gd" id="2_k6xnk"]
[ext_resource type="Script" path="res://scripts/CorrectLabel.gd" id="3_uvg17"]
[ext_resource type="Script" path="res://scripts/WrongLabel.gd" id="4_bs5eu"]
[ext_resource type="PackedScene" uid="uid://clp6x1gh72xtu" path="res://sfx/correct_sfx.tscn" id="5_4gpuw"]
[ext_resource type="Script" path="res://sfx/correct_sfx.gd" id="6_hke8m"]
[ext_resource type="PackedScene" uid="uid://ccyr38gj2ekkb" path="res://sfx/wrong_sfx.tscn" id="7_qvjp8"]
[ext_resource type="Script" path="res://sfx/wrong_sfx.gd" id="9_1ov5p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3i4ky"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.666667, 0.72549, 0.952941, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.282353, 0.282353, 0.282353, 1)
border_blend = true

[node name="Control" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -331.0
offset_right = 331.0
offset_bottom = 432.0
grow_horizontal = 2
script = ExtResource("1_4aetr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.0
offset_top = -216.0
offset_right = 321.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3i4ky")
metadata/_edit_lock_ = true

[node name="SyntaxError" type="Label" parent="Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -8.0
offset_right = 135.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.870588, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("2_k6xnk")

[node name="Timer" type="Timer" parent="Panel/SyntaxError"]
process_mode = 3
process_callback = 0
one_shot = true

[node name="ErrorLabel" type="Label" parent="Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -8.0
offset_right = 135.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.870588, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("2_aynrn")

[node name="Timer" type="Timer" parent="Panel/ErrorLabel"]
process_mode = 3
process_callback = 0
one_shot = true

[node name="CorrectLabel" type="Label" parent="Panel"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -23.5
offset_right = 255.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.74902, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("3_uvg17")
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="Panel/CorrectLabel"]
process_mode = 3
process_callback = 0
one_shot = true

[node name="CorrectSfx" parent="Panel/CorrectLabel" instance=ExtResource("5_4gpuw")]
autoplay = false
bus = &"sfx"
script = ExtResource("6_hke8m")

[node name="WrongLabel" type="Label" parent="Panel"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -23.5
offset_right = 255.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("4_bs5eu")
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="Panel/WrongLabel"]
process_mode = 3
process_callback = 0
one_shot = true

[node name="WrongSfx" parent="Panel/WrongLabel" instance=ExtResource("7_qvjp8")]
autoplay = false
bus = &"sfx"
script = ExtResource("9_1ov5p")

[node name="HintLabel" type="Label" parent="Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -171.0
offset_right = 254.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Timer" type="Timer" parent="Panel/HintLabel"]
process_mode = 3
process_callback = 0
one_shot = true

[node name="Question" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 78.0
offset_top = 23.0
offset_right = 578.0
offset_bottom = 236.0
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LineEdit" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 68.0
offset_top = 257.0
offset_right = 577.0
offset_bottom = 308.0
metadata/_edit_lock_ = true

[node name="Send" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 137.0
offset_top = 333.0
offset_right = 287.0
offset_bottom = 381.0
theme_override_font_sizes/font_size = 20
text = "Send
"

[node name="Hint" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 346.0
offset_top = 331.0
offset_right = 496.0
offset_bottom = 379.0
theme_override_font_sizes/font_size = 20
text = "Hint
"

[node name="Timer" type="Timer" parent="."]
process_mode = 3
process_callback = 0
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Panel/SyntaxError/Timer" to="Panel/SyntaxError" method="_on_timer_timeout"]
[connection signal="timeout" from="Panel/ErrorLabel/Timer" to="Panel/ErrorLabel" method="_on_timer_timeout"]
[connection signal="timeout" from="Panel/CorrectLabel/Timer" to="Panel/CorrectLabel" method="_on_timer_timeout"]
[connection signal="timeout" from="Panel/WrongLabel/Timer" to="Panel/WrongLabel" method="_on_timer_timeout"]
[connection signal="timeout" from="Panel/HintLabel/Timer" to="Panel/HintLabel" method="_on_timer_timeout"]
[connection signal="pressed" from="Panel/Send" to="." method="_on_send_pressed"]
[connection signal="pressed" from="Panel/Hint" to="." method="_on_hint_pressed"]
